--- a/StudentManagementSystem/src/main/resources/application.properties
+++ b/StudentManagementSystem/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=StudentManagementSystem
 
 spring.datasource.url=jdbc:mysql://localhost:3306/siddhraj
-spring.datasource.username=root
-spring.datasource.password=SIDhu@8099
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialet=org.hibernate.dialect.MySQL8Dialect
